added paraphaph so I can print the bestphrase of every generation and fixed a typo in phrase

--- a/view.html
+++ b/view.html
@@ -3,15 +3,15 @@
 <head>
     
     <script src="logic.js"></script>
-    <script src="phase.js"></script>
+    <script src="phrase.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ML</title>
 </head>
 <body>
-<div id="UserPhaseDiv">
-    <label for="fname">Phase:</label>
-  <input type="text" id="phase" name="Phase"><br><br>
+<div id="UserPhraseDiv">
+    <label for="fname">Phrase:</label>
+  <input type="text" id="phrase" name="Phrase"><br><br>
   <button id="startBtn">Start</button>
   </div>
     <p id="p1"> h</p>
